--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -17,7 +17,7 @@
   --small-font: 13px;
 }
 
-button {
+button, textarea {
   border: none;
 }
 
@@ -80,7 +80,7 @@ header svg {
 }
 
 .card_list {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .card_list .top {
@@ -89,7 +89,7 @@ header svg {
 }
 
 .card_list .center {
-  width: 375px;
+  width: 100;
 }
 
 .card_list .center img {
@@ -120,7 +120,7 @@ header svg {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 500px;
+  height: 450px;
   background-color: var(--white-color);
   border-radius: 20px;
 }
@@ -160,12 +160,13 @@ header svg {
 
 .popup_content textarea {
   width: 85%;
+  margin: 10px;
 }
 
 .popup_content .picture {
-  width: 30px;
-  height: 30px;
-  margin-left: 10px;
+  width: 50px;
+  height: 50px;
+  margin: 10px;
 }
 
 .popup_content .picture img {
@@ -177,4 +178,6 @@ header svg {
   border: 1px solid var(--lightgrey-color);
   background-color: var(--ivory-color);
   margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
